; ModuleID = '/home/carl/AnghaBench/linux/virt/kvm/arm/vgic/extr_vgic-mmio.c_vgic_get_vmcr.c'
source_filename = "/home/carl/AnghaBench/linux/virt/kvm/arm/vgic/extr_vgic-mmio.c_vgic_get_vmcr.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_2__ = type { i64 }
%struct.kvm_vcpu = type { i32 }
%struct.vgic_vmcr = type { i32 }

@kvm_vgic_global_state = common dso_local global %struct.TYPE_2__ zeroinitializer, align 8
@VGIC_V2 = common dso_local global i64 0, align 8

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @vgic_get_vmcr(%struct.kvm_vcpu* %0, %struct.vgic_vmcr* %1) #0 {
  %3 = alloca %struct.kvm_vcpu*, align 8
  %4 = alloca %struct.vgic_vmcr*, align 8
  store %struct.kvm_vcpu* %0, %struct.kvm_vcpu** %3, align 8
  store %struct.vgic_vmcr* %1, %struct.vgic_vmcr** %4, align 8
  %5 = load i64, i64* getelementptr inbounds (%struct.TYPE_2__, %struct.TYPE_2__* @kvm_vgic_global_state, i32 0, i32 0), align 8
  %6 = load i64, i64* @VGIC_V2, align 8
  %7 = icmp eq i64 %5, %6
  br i1 %7, label %8, label %12

8:                                                ; preds = %2
  %9 = load %struct.kvm_vcpu*, %struct.kvm_vcpu** %3, align 8
  %10 = load %struct.vgic_vmcr*, %struct.vgic_vmcr** %4, align 8
  %11 = call i32 @vgic_v2_get_vmcr(%struct.kvm_vcpu* %9, %struct.vgic_vmcr* %10)
  br label %16

12:                                               ; preds = %2
  %13 = load %struct.kvm_vcpu*, %struct.kvm_vcpu** %3, align 8
  %14 = load %struct.vgic_vmcr*, %struct.vgic_vmcr** %4, align 8
  %15 = call i32 @vgic_v3_get_vmcr(%struct.kvm_vcpu* %13, %struct.vgic_vmcr* %14)
  br label %16

16:                                               ; preds = %12, %8
  ret void
}

declare dso_local i32 @vgic_v2_get_vmcr(%struct.kvm_vcpu*, %struct.vgic_vmcr*) #1

declare dso_local i32 @vgic_v3_get_vmcr(%struct.kvm_vcpu*, %struct.vgic_vmcr*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
